--- a/.gitattributes
+++ b/.gitattributes
@@ -2,11 +2,16 @@
 * text=auto eol=lf
 
 # Ignore some files when exporting to a ZIP.
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/LICENSE            export-ignore
-/LICENSE.md         export-ignore
-/README.md          export-ignore
-/project.godot      export-ignore
-/icon.png           export-ignore
-/icon.svg           export-ignore
+/.gitattributes             export-ignore
+/.gitignore                 export-ignore
+/LICENSE                    export-ignore
+/LICENSE.md                 export-ignore
+/README.md                  export-ignore
+/project.godot              export-ignore
+/icon.png                   export-ignore
+/icon.png.import            export-ignore
+/icon.svg                   export-ignore
+/default_env.tres           export-ignore
+/.gut_editor_shortcuts.cfg  export-ignore
+/.gut_editor_config.json    export-ignore
+/test/                      export-ignore
